# edrys-lab-micro-ros

./: Dockerfile  README.md
home/Documents/: .first_publisher.c  first_node.c  restart_pico.hex  restart_pico.sh  run_code.sh
home/micro_ros_pico_w/: CMakeLists.txt  main.c  pico_wifi_transport.h  run_code.sh
laboratory/: micro-ros.yaml
